fix: let tables scroll horizontally on mobile (#1428)

--- a/assets/css/content.scss
+++ b/assets/css/content.scss
@@ -417,4 +417,14 @@
   }
 }
 
+.nuxt-content {
+  table {
+    @media (max-width: 678px) {
+      display: block;
+      width: 100%;
+      overflow-x: scroll;
+    }
+  }
+}
+
 /* purgecss end ignore */
